# SampleGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: sample_gen.h
src/: sample_gen.c
test/: main.c
